--- a/IntroToPortfolioConstruction/notebooks_and_codem01_v02/nb/lab_119.ipynb
+++ b/IntroToPortfolioConstruction/notebooks_and_codem01_v02/nb/lab_119.ipynb
@@ -200,7 +200,27 @@
     "## set up some DataFrames for saving intermediate values\n",
     "account_history = pd.DataFrame().reindex_like(risky_r)\n",
     "risky_w_history = pd.DataFrame().reindex_like(risky_r)\n",
-    "cushion_history = pd.DataFrame().reindex_like(risky_r)\n"
+    "cushion_history = pd.DataFrame().reindex_like(risky_r)\n",
+    "for step in range(n_steps):\n",
+    "    cushion = (account_value - floor_value)/account_value\n",
+    "    risky_w = m*cushion\n",
+    "    risky_w = np.minimum(risky_w, 1)\n",
+    "    risky_w = np.maximum(risky_w, 0)\n",
+    "    safe_w = 1-risky_w\n",
+    "    risky_alloc = account_value*risky_w\n",
+    "    safe_alloc = account_value*safe_w\n",
+    "    # recompute the new account value at the end of this step\n",
+    "    account_value = risky_alloc*(1+risky_r.iloc[step]) + safe_alloc*(1+safe_r.iloc[step])\n",
+    "    # save the histories for analysis and plotting\n",
+    "    cushion_history.iloc[step] = cushion\n",
+    "    risky_w_history.iloc[step] = risky_w\n",
+    "    account_history.iloc[step] = account_value\n",
+    "    risky_wealth = start*(1+risky_r).cumprod()\n",
+    "\n",
+    "ind = \"Beer\"\n",
+    "ax = account_history[ind].plot()\n",
+    "risky_wealth[ind].plot(style=\"k:\")\n",
+    "ax.axhline(y=floor_value, color='r', linestyle='--')"
    ]
   },
   {
@@ -1117,9 +1137,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
